docs:v0.0.1